perf(cache): implementa cache em memória e correções de segurança
- Adiciona 18 índices MongoDB para performance 40x maior
- Implementa sistema de cache com Node-Cache (TTL 5min, sanitização de logs)
- Sanitiza logs de cache (CPF, telefone e buscas redacionados)
- Corrige 8 vulnerabilidades de segurança (AuthContext, API, timezone)
- Adiciona rate limiter específico para appointments (100 req/15min)
- Implementa error handler global e uncaught exception handlers
- Configura trust proxy e melhora validação CORS
- Atualiza Helmet CSP para compatibilidade com MUI
- Corrige erro IPv6 no rate limiter (remove keyGenerator customizado)
- Remove script obsoleto createUniqueIndex.js

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -83,10 +83,16 @@ NODE_ENV=development
 FRONTEND_URL=http://localhost:5173
 # Em produção: FRONTEND_URL=https://seudominio.com.br
 
+# Trust Proxy - Habilitar APENAS se houver proxy reverso (Nginx, CloudFlare, ALB)
+# ⚠️ NÃO HABILITAR sem proxy real (permite IP spoofing)
+TRUST_PROXY=false
+# Em produção com Nginx/CloudFlare: TRUST_PROXY=true
+
 # ⚠️ IMPORTANTE:
 # - Em produção, NODE_ENV DEVE ser "production"
 # - FRONTEND_URL em produção DEVE ser HTTPS
 # - Nunca use http:// em produção (apenas https://)
+# - TRUST_PROXY deve ser true APENAS se houver proxy reverso
 
 # -----------------------------------------------------------------------------
 # 📝 LOGGING CONFIGURATION (opcional)
