--- a/backend/package.json
+++ b/backend/package.json
@@ -31,6 +31,7 @@
     "joi": "^18.0.2",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.15.1",
+    "node-cache": "^5.1.2",
     "winston": "^3.18.3"
   }
 }
